gobmkida/c0/play_aftermath
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_aftermath/src/engine/aftermath.c:1397:6: error: use of undeclared identifier 'play_aftermath_current_color'
if ( play_aftermath_current_color != colora ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_aftermath/src/engine/aftermath.c:1399:1: error: use of undeclared identifier 'play_aftermath_current_color'
play_aftermath_current_color = colora; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_aftermath/src/engine/aftermath.c:1404:39: error: use of undeclared identifier 'play_aftermath_current_board'
if ( board[pos] != 3 && board[pos] != play_aftermath_current_board[pos] ) 
                                      ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_aftermath/src/engine/aftermath.c:1406:1: error: use of undeclared identifier 'play_aftermath_current_board'
play_aftermath_current_board[pos] = board[pos]; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_aftermath/src/obj/1/aftermath.o] Error 1
